@startuml
hide methods
left to right direction

Title "Domain Model - Upload Candidate Requirements"

skinparam class {
    LifeLineBorderColor DarkBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFFF
    ArrowColor grey
    BorderColor black
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor Green
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFDD
    ArrowColor DarkGrey
    BorderColor Black
}

package "Job Opening Aggregate"{
entity JobOpening <<entity>><<root>>

    card JobReference <<Value Object>> {
    }
    card TitleOrFunction <<Value Object>> {
    }
    card ContractType <<Value Object>> {
    }
    card Mode <<Value Object>> {
    }
    card Address <<Value Object>> {
    }
    card VacanciesNumber <<Value Object>> {
    }
    card Description <<Value Object>> {
    }

    JobOpening --> JobReference
    JobOpening --> TitleOrFunction
    JobOpening --> ContractType
    JobOpening --> Mode
    JobOpening --> Address
    JobOpening --> VacanciesNumber
    JobOpening --> Description

    note right of ContractType
        Can be one of the following:
        - full-time
        - part-time
    end note

    note right of Mode
         Can be one of the following:
         - remote
         - hybrid
         - onsite
    end note

}

package "Application Aggregate"{
entity Application <<entity>><<root>>

    card ApplicationFiles <<Value Object>>{
    }
    card Status <<Value Object>>{
    }
    card SubmissionDate <<Value Object>>{
    }
    card Rank <<Value Object>>{
    }

    Application --> ApplicationFiles
    Application --> Status
    Application --> SubmissionDate
    Application --> Rank

    note right of Status
        Can be one of the following:
        - submitted
        - pending
        - accepted
        - declined
    end note

    note right of ApplicationFiles
        Can be one of the following:
        - text file with the contents of the email
        - file for each file attached to the email
        - text file with the contents of each file attached to the email
        - text file with the data of the application and candidate
    end note

}

package "Operator Aggregate"{
    entity Operator <<entity>><<root>>

}

package "Job Requirements Specification Aggregate"{
entity JobRequirementsSpecification <<entity>><<root>>

    entity Requirements <<entity>>

    JobRequirementsSpecification --> Requirements

}


package "Candidate Aggregate"{
entity Candidate <<entity>><<root>>

    card Curriculum <<Value Object>> {
    }
    card TelephoneNumber <<Value Object>>{
    }

    Candidate --> Curriculum
    Candidate --> TelephoneNumber
}

    JobOpening "1" <-- "N " Application : has
    JobRequirementsSpecification "1" <-- "N" JobOpening : associated
    Operator "1" --> "N" Application : registers
    Application "N" --> "1" Candidate


@enduml